<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.ben12</groupId>
		<artifactId>reta-parent</artifactId>
		<version>1.0.0</version>
	</parent>
	<artifactId>reta-packaging</artifactId>
	<packaging>pom</packaging>
	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.ben12</groupId>
			<artifactId>reta-api</artifactId>
		</dependency>
		<dependency>
			<groupId>com.ben12</groupId>
			<artifactId>reta-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.ben12</groupId>
			<artifactId>reta-tika-plugin</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.8.1</version>
				<executions>
					<execution>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
				<configuration>
					<outputDirectory>${project.build.directory}/app/libs</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>jpackage</id>
						<goals>
							<goal>exec</goal>
						</goals>
						<phase>package</phase>
						<configuration>
							<executable>jpackage</executable>
							<arguments>
								<argument>--type</argument>
								<argument>msi</argument>
								<argument>--app-version</argument>
								<argument>${project.version}</argument>
								<argument>--copyright</argument>
								<argument>Copyright © 2025 Benoît Moreau (ben.12)</argument>
								<argument>--icon</argument>
								<argument>reta.ico</argument>
								<argument>--name</argument>
								<argument>RETA</argument>
								<argument>--description</argument>
								<argument>Requirement Engineering Traceability Analysis</argument>
								<argument>--dest</argument>
								<argument>${project.build.directory}</argument>
								<argument>--vendor</argument>
								<argument>ben.12</argument>
								<argument>--add-modules</argument>
								<argument>java.base,java.logging,java.desktop,java.xml,java.scripting,java.sql,jdk.charsets,jdk.unsupported</argument>
								<argument>--input</argument>
								<argument>${project.build.directory}/app</argument>
								<argument>--main-jar</argument>
								<argument>libs/reta-core-${project.version}.jar</argument>
								<argument>--main-class</argument>
								<argument>com.ben12.reta.Launcher</argument>
								<argument>--java-options</argument>
								<argument>-Xmx256m</argument>
								<argument>--file-associations</argument>
								<argument>file-associations.conf</argument>
								<argument>--win-dir-chooser</argument>
								<argument>--win-per-user-install</argument>
								<argument>--win-shortcut</argument>
								<argument>--win-shortcut-prompt</argument>
								<argument>--win-menu</argument>
								<argument>--win-menu-group</argument>
								<argument>RETA</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>